--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0064.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0064.html
@@ -51,7 +51,7 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1494 277 1543 317" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἱ</ins>
+            <ins title="nlp 2.00">αἳ</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1564 277 1691 331" lang="grc">
@@ -108,9 +108,14 @@
             <ins class="alt" title="nlp 1.00">διήκουσε</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 1276 416 1360 459">
+        <span id="w_18_0" class="ocr_word" title="bbox 1276 416 1360 459">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ’</ins>
+            <ins class="alt" title="nlp 2.00">δ᾿</ins>
+          </span>
+        </span>
+        <span id="w_18_1" class="ocr_word" title="bbox 1276 416 1360 459">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὁ</ins>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1382 420 1584 473" lang="grc">
@@ -351,8 +356,7 @@
         </span>
         <span id="w_63" class="ocr_word" title="bbox 834 846 839 897">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 868 843 1153 899" lang="grc">
@@ -471,7 +475,7 @@
         </span>
         <span id="w_87" class="ocr_word" title="bbox 1920 983 2008 1041" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐ)ν</ins>
+            <ins title="nlp 2.00">(ἐν)ν</ins>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 2050 981 2098 1026" lang="grc">
@@ -513,7 +517,7 @@
         </span>
         <span id="w_95" class="ocr_word" title="bbox 1382 1053 1649 1111" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθη)γητῇ</ins>
+            <ins title="nlp 2.00">(καθη)γητῇ</ins>
           </span>
         </span>
       </span>
@@ -567,13 +571,12 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1784 1125 1934 1168">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">hauMa</ins>
-            <del title="nlp 0.90">hauMa</del>
+            <ins title="nlp 2.00">hausta</ins>
           </span>
         </span>
-        <span id="w_105" class="ocr_word" title="bbox 1958 1126 2099 1168">
+        <span id="w_105_0" class="ocr_word" title="bbox 1958 1126 2099 1168">
           <span class="alternatives">
-            <ins title="nlp 2.00">uidentur</ins>
+            <ins class="alt" title="nlp 2.00">videntur</ins>
           </span>
         </span>
       </span>
@@ -721,7 +724,7 @@
         </span>
         <span id="w_133" class="ocr_word" title="bbox 956 1339 1034 1397" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῷ</ins>
+            <ins title="nlp 2.00">(τῷ</ins>
           </span>
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1055 1355 1154 1396" lang="grc">
@@ -754,9 +757,14 @@
             <ins title="nlp 2.00">. . . . . . . . .</ins>
           </span>
         </span>
-        <span id="w_140" class="ocr_word" title="bbox 1961 1338 1964 1396" lang="grc">
+        <span id="w_140_0" class="ocr_word" title="bbox 1961 1338 1964 1396">
           <span class="alternatives">
-            <ins title="nlp 2.00">πτειν</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_140_1" class="ocr_word" title="bbox 1961 1338 1964 1396">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">πτειν</ins>
           </span>
         </span>
       </span>
@@ -829,14 +837,19 @@
             <ins title="nlp 2.00">XII.</ins>
           </span>
         </span>
-        <span id="w_152" class="ocr_word" title="bbox 731 1554 1035 1610" lang="grc">
+        <span id="w_152_0" class="ocr_word" title="bbox 731 1554 1035 1610">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Ἀθηνόδωρος</ins>
+            <ins class="alt" title="nlp 2.00">Ἀθηνόδωρος</ins>
+          </span>
+        </span>
+        <span id="w_152_1" class="ocr_word" title="bbox 731 1554 1035 1610">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">(</ins>
           </span>
         </span>
         <span id="w_153" class="ocr_word" title="bbox 1066 1553 1272 1611" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Σολεύς, . .</ins>
+            <ins title="nlp 2.00">Σολεύς, . .</ins>
           </span>
         </span>
         <span id="w_156" class="ocr_word" title="bbox 1367 1552 1371 1610" lang="grc">
@@ -854,14 +867,19 @@
             <ins class="alt" title="nlp 1.00">Σπινθ(άρου</ins>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 1955 1551 2001 1610">
+        <span id="w_159_0" class="ocr_word" title="bbox 1955 1551 2001 1610">
           <span class="alternatives">
-            <ins title="nlp 2.00">(άρου ἀ)</ins>
+            <ins class="alt" title="nlp 2.00">ἀ)</ins>
           </span>
         </span>
-        <span id="w_161" class="ocr_word" title="bbox 2027 1567 2100 1595" lang="grc">
+        <span id="w_159_1" class="ocr_word" title="bbox 1955 1551 2001 1610">
           <span class="alternatives">
-            <ins title="nlp 2.00">πέδω</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_161_0" class="ocr_word" title="bbox 2027 1567 2100 1595">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">πέ-</ins>
           </span>
         </span>
       </span>
@@ -871,9 +889,9 @@
             <ins title="nlp 2.00">20</ins>
           </span>
         </span>
-        <span id="w_163" class="ocr_word" title="bbox 361 1625 552 1683" lang="grc">
+        <span id="w_163_0" class="ocr_word" title="bbox 361 1625 552 1683">
           <span class="alternatives">
-            <ins title="nlp 2.00">(κεν).</ins>
+            <ins class="alt" title="nlp 2.00">δω(κεν).</ins>
           </span>
         </span>
       </span>
@@ -937,8 +955,7 @@
         </span>
         <span id="w_174" class="ocr_word" title="bbox 1667 1694 1744 1736">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ko.</ins>
-            <del title="nlp 0.90">Ko.</del>
+            <ins title="nlp 2.00">Κö.</ins>
           </span>
         </span>
         <span id="w_175" class="ocr_word" title="bbox 1778 1696 1837 1751">
@@ -1121,7 +1138,7 @@
       <span class="ocr_line" title="bbox 308 1978 1502 2037">
         <span id="w_210" class="ocr_word" title="bbox 308 2002 342 2029">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">26</ins>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
         <span id="w_211" class="ocr_word" title="bbox 361 1979 557 2036" lang="grc">
@@ -1169,8 +1186,7 @@
         </span>
         <span id="w_219" class="ocr_word" title="bbox 822 2053 960 2096">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_220" class="ocr_word" title="bbox 987 2051 1071 2095">
@@ -1196,7 +1212,7 @@
         </span>
         <span id="w_224" class="ocr_word" title="bbox 1489 2049 1532 2108" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1555 2049 1732 2108" lang="grc">
@@ -1309,7 +1325,7 @@
       <span class="ocr_line" title="bbox 310 2337 830 2395">
         <span id="w_246" class="ocr_word" title="bbox 310 2359 346 2386">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">80</ins>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
         <span id="w_247" class="ocr_word" title="bbox 423 2337 523 2395" lang="grc">
@@ -1399,7 +1415,7 @@
       <span class="ocr_line" title="bbox 310 2693 1251 2751">
         <span id="w_261" class="ocr_word" title="bbox 310 2715 344 2742">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">36</ins>
+            <ins title="nlp 2.00">35</ins>
           </span>
         </span>
         <span id="w_262" class="ocr_word" title="bbox 422 2693 521 2751" lang="grc">
@@ -1510,8 +1526,7 @@
         </span>
         <span id="w_281" class="ocr_word" title="bbox 1822 3075 2098 3110">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Atbenodorum</ins>
-            <del title="nlp 0.90">Atbenodorum</del>
+            <ins title="nlp 2.00">Αthenodorum</ins>
           </span>
         </span>
       </span>
@@ -1530,8 +1545,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 740 3132 855 3168">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">babet</ins>
-            <del title="nlp 0.90">babet</del>
+            <ins title="nlp 2.00">habet</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 879 3133 921 3168">
