--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0065.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0065.html
@@ -30,7 +30,7 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 435 266 593 319" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Μῶν</ins>
+            <ins title="nlp 2.00">λέξεων</ins>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 624 265 722 325">
@@ -77,9 +77,9 @@
             <ins class="alt" title="nlp 1.00">ποιητικῆς</ins>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 697 408 947 465" lang="grc">
+        <span id="w_12_0" class="ocr_word" title="bbox 697 408 947 465">
           <span class="alternatives">
-            <ins title="nlp 2.00">όκροάσεως</ins>
+            <ins class="alt" title="nlp 2.00">ἀκροάσεως</ins>
           </span>
         </span>
       </span>
@@ -212,36 +212,36 @@
             <ins class="alt" title="nlp 1.00">ταύτην</ins>
           </span>
         </span>
-        <span id="w_37" class="ocr_word" title="bbox 1386 779 1562 838" lang="grc">
+        <span id="w_37_0" class="ocr_word" title="bbox 1386 779 1562 838">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μόνη(ν,</ins>
+            <ins class="alt" title="nlp 2.00">μόνη(ν,</ins>
+          </span>
+        </span>
+        <span id="w_37_1" class="ocr_word" title="bbox 1386 779 1562 838">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἀλλ᾿</ins>
           </span>
         </span>
         <span id="w_38" class="ocr_word" title="bbox 1594 779 1698 824" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀλλ’</ins>
-          </span>
-        </span>
-        <span id="w_39" class="ocr_word" title="bbox 1716 780 1994 839" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀν) | σισχυντη(σ)άντω</ins>
+            <ins title="nlp 2.00">ἀν) | αισχυν-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 245 848 1996 910">
-        <span id="w_40" class="ocr_word" title="bbox 245 849 535 908" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(ν νοθεῦ) | σαι</ins>
-          </span>
-        </span>
         <span id="w_42" class="ocr_word" title="bbox 883 849 956 893" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">νοθεῦ) | σαι</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1007 850 1415 907" lang="grc">
+        <span id="w_43_0" class="ocr_word" title="bbox 1007 850 1415 907">
           <span class="alternatives">
-            <ins title="nlp 2.00">προσυποπτε(πυσαι</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_43_1" class="ocr_word" title="bbox 1007 850 1415 907">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">προσυποπτε(ῦσαι</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1456 856 1462 904">
@@ -254,36 +254,41 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_46" class="ocr_word" title="bbox 1626 867 1713 895" lang="grc">
+        <span id="w_46_0" class="ocr_word" title="bbox 1626 867 1713 895">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπὸ</ins>
+            <ins class="alt" title="nlp 2.00">ὑπὸ</ins>
           </span>
         </span>
-        <span id="w_47" class="ocr_word" title="bbox 1767 852 1996 910" lang="grc">
+        <span id="w_46_1" class="ocr_word" title="bbox 1626 867 1713 895">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ζήνων(οςνεωσ) | τὶ</ins>
+            <ins class="alt" title="nlp 2.00">Ζήνων(ος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 247 919 2051 981">
-        <span id="w_49" class="ocr_word" title="bbox 501 920 906 979" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">συνεῤῥαμμέν(ην)</ins>
-          </span>
-        </span>
         <span id="w_50" class="ocr_word" title="bbox 950 921 1062 965" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθ’</ins>
+            <ins title="nlp 2.00">νεωσ | τὶ </ins>
           </span>
         </span>
-        <span id="w_51" class="ocr_word" title="bbox 1080 922 1134 965">
+        <span id="w_51_0" class="ocr_word" title="bbox 1080 922 1134 965">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὃν</ins>
+            <ins class="alt" title="nlp 2.00">συνεῤῥαμμέν(ην)</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1160 924 1167 977">
+        <span id="w_51_1" class="ocr_word" title="bbox 1080 922 1134 965">
           <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
+            <ins class="alt" title="nlp 2.00">καθ᾿</ins>
+          </span>
+        </span>
+        <span id="w_52_0" class="ocr_word" title="bbox 1160 924 1167 977">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὅν</ins>
+          </span>
+        </span>
+        <span id="w_52_1" class="ocr_word" title="bbox 1160 924 1167 977">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">|</ins>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 1194 924 1359 979" lang="grc">
@@ -296,19 +301,19 @@
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_55" class="ocr_word" title="bbox 1496 922 1687 981" lang="grc">
+        <span id="w_55_0" class="ocr_word" title="bbox 1496 922 1687 981">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἄ)λλοις</ins>
+            <ins class="alt" title="nlp 2.00">(ἄ)λλοις</ins>
+          </span>
+        </span>
+        <span id="w_55_1" class="ocr_word" title="bbox 1496 922 1687 981">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 1729 923 1995 981" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">δ(ακ)τύ | λῳ</ins>
-          </span>
-        </span>
-        <span id="w_57" class="ocr_word" title="bbox 2017 942 2051 968">
-          <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
@@ -349,15 +354,9 @@
             <del title="nlp 0.90">Zenonis</del>
           </span>
         </span>
-        <span id="w_64" class="ocr_word" title="bbox 1114 1065 1425 1120">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">RempuUicam</ins>
-            <del title="nlp 0.90">RempuUicam</del>
-          </span>
-        </span>
         <span id="w_65" class="ocr_word" title="bbox 1433 1100 1444 1122">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">Rempublicam,</ins>
           </span>
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1486 1080 1570 1109">
@@ -374,8 +373,7 @@
         </span>
         <span id="w_68" class="ocr_word" title="bbox 1774 1070 1994 1122">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">postqmm</ins>
-            <del title="nlp 0.90">postqmm</del>
+            <ins title="nlp 2.00">postquam</ins>
           </span>
         </span>
       </span>
@@ -393,7 +391,7 @@
         </span>
         <span id="w_71" class="ocr_word" title="bbox 609 1135 787 1193" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">νεωστὶ</ins>
+            <ins title="nlp 2.00">(νεωστὶ</ins>
           </span>
         </span>
         <span id="w_72" class="ocr_word" title="bbox 826 1136 1226 1194" lang="grc">
@@ -685,8 +683,7 @@
       <span class="ocr_line" title="bbox 251 1636 2055 1693">
         <span id="w_126" class="ocr_word" title="bbox 251 1636 357 1693">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(scU.</ins>
-            <del title="nlp 0.90">(scU.</del>
+            <ins title="nlp 2.00">(scil.</ins>
           </span>
         </span>
         <span id="w_127" class="ocr_word" title="bbox 391 1637 580 1681">
@@ -738,8 +735,7 @@
         </span>
         <span id="w_135" class="ocr_word" title="bbox 2019 1656 2055 1682">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ao</ins>
-            <del title="nlp 0.90">ao</del>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -752,8 +748,7 @@
         </span>
         <span id="w_137" class="ocr_word" title="bbox 455 1710 699 1764">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">respondeho</ins>
-            <del title="nlp 0.90">respondeho</del>
+            <ins title="nlp 2.00">respondebo</ins>
           </span>
         </span>
         <span id="w_138" class="ocr_word" title="bbox 730 1710 928 1764">
@@ -774,15 +769,9 @@
             <del title="nlp 0.90">si</del>
           </span>
         </span>
-        <span id="w_141" class="ocr_word" title="bbox 1217 1711 1518 1765">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">interrogentur</ins>
-            <del title="nlp 0.90">interrogentur</del>
-          </span>
-        </span>
         <span id="w_142" class="ocr_word" title="bbox 1523 1745 1535 1766">
           <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins title="nlp 2.00">interrogentur,</ins>
           </span>
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1566 1725 1624 1753">
@@ -869,8 +858,7 @@
       <span class="ocr_line" title="bbox 251 1852 2002 1908">
         <span id="w_156" class="ocr_word" title="bbox 251 1852 518 1906">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">venerabUes,</ins>
-            <del title="nlp 0.90">venerabUes,</del>
+            <ins title="nlp 2.00">venerabiles,</ins>
           </span>
         </span>
         <span id="w_157" class="ocr_word" title="bbox 549 1866 634 1896">
@@ -899,8 +887,7 @@
         </span>
         <span id="w_161" class="ocr_word" title="bbox 1079 1857 1236 1896">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">naiura</ins>
-            <del title="nlp 0.90">naiura</del>
+            <ins title="nlp 2.00">natura</ins>
           </span>
         </span>
         <span id="w_162" class="ocr_word" title="bbox 1278 1853 1459 1896">
@@ -970,7 +957,7 @@
       <span class="ocr_line" title="bbox 378 2519 2003 2580">
         <span id="w_173" class="ocr_word" title="bbox 378 2519 439 2564">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">46</ins>
+            <ins title="nlp 2.00">45</ins>
           </span>
         </span>
         <span id="w_174" class="ocr_word" title="bbox 472 2521 688 2580">
@@ -981,8 +968,7 @@
         </span>
         <span id="w_175" class="ocr_word" title="bbox 709 2522 847 2564">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_176" class="ocr_word" title="bbox 867 2521 951 2565">
@@ -1196,8 +1182,7 @@
         </span>
         <span id="w_216" class="ocr_word" title="bbox 1050 2809 1360 2863">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">phUosophiatn</ins>
-            <del title="nlp 0.90">phUosophiatn</del>
+            <ins title="nlp 2.00">philosophiam</ins>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 1403 2810 1481 2852">
@@ -1233,8 +1218,7 @@
       <span class="ocr_line" title="bbox 262 2879 2003 2936">
         <span id="w_222" class="ocr_word" title="bbox 262 2879 367 2934">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(sdl.</ins>
-            <del title="nlp 0.90">(sdl.</del>
+            <ins title="nlp 2.00">(scil.</ins>
           </span>
         </span>
         <span id="w_223" class="ocr_word" title="bbox 410 2884 558 2922">
@@ -1256,8 +1240,7 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1092 2881 1363 2935">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">partitioneni</ins>
-            <del title="nlp 0.90">partitioneni</del>
+            <ins title="nlp 2.00">partitionem</ins>
           </span>
         </span>
         <span id="w_227" class="ocr_word" title="bbox 1407 2895 1434 2921">
@@ -1272,15 +1255,14 @@
             <del title="nlp 0.90">Zenone</del>
           </span>
         </span>
-        <span id="w_229" class="ocr_word" title="bbox 1684 2893 1768 2923" lang="grc">
+        <span id="w_229_0" class="ocr_word" title="bbox 1684 2893 1768 2923">
           <span class="alternatives">
-            <ins title="nlp 2.00">Zenone</ins>
+            <ins class="alt" title="nlp 2.00">esse</ins>
           </span>
         </span>
-        <span id="w_230" class="ocr_word" title="bbox 1808 2884 2003 2922">
+        <span id="w_229_1" class="ocr_word" title="bbox 1684 2893 1768 2923">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">retmtam</ins>
-            <del title="nlp 0.90">retmtam</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1448,14 +1430,9 @@
             <del title="nlp 0.90">mg.</del>
           </span>
         </span>
-        <span id="w_260_0" class="ocr_word" title="bbox 1424 3140 1480 3176">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">B</ins>
-          </span>
-        </span>
         <span id="w_260_1" class="ocr_word" title="bbox 1424 3140 1480 3176">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">2</ins>
+            <ins class="alt" title="nlp 2.00">B2</ins>
           </span>
         </span>
       </span>
