--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0066.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0066.html
@@ -12,8 +12,7 @@
       <span class="ocr_line" title="bbox 374 179 1413 220">
         <span id="w_0" class="ocr_word" title="bbox 374 179 426 220">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IG</ins>
-            <del title="nlp 0.90">IG</del>
+            <ins title="nlp 2.00">16</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1062 181 1188 214">
@@ -43,8 +42,7 @@
         </span>
         <span id="w_5" class="ocr_word" title="bbox 831 287 968 329">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 989 286 1072 329">
@@ -174,9 +172,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 488 498 897 541">
-        <span id="w_30" class="ocr_word" title="bbox 488 498 619 541">
+        <span id="w_30_0" class="ocr_word" title="bbox 488 498 619 541">
           <span class="alternatives">
-            <ins title="nlp 2.00">Cf.II</ins>
+            <ins class="alt" title="nlp 2.00">Cf.</ins>
+          </span>
+        </span>
+        <span id="w_30_1" class="ocr_word" title="bbox 488 498 619 541">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">II</ins>
           </span>
         </span>
         <span id="w_31" class="ocr_word" title="bbox 649 514 687 541">
@@ -185,9 +188,9 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 708 499 897 541">
+        <span id="w_32_0" class="ocr_word" title="bbox 708 499 897 541">
           <span class="alternatives">
-            <ins title="nlp 2.00">41—44</ins>
+            <ins class="alt" title="nlp 2.00">41—44.</ins>
           </span>
         </span>
       </span>
@@ -650,16 +653,11 @@
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1897 1352 2107 1394" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διαλεκτι-</ins>
+            <ins title="nlp 2.00">διαλεκτικῶν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 367 1422 2109 1479">
-        <span id="w_117" class="ocr_word" title="bbox 367 1440 458 1467" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κῶν</ins>
-          </span>
-        </span>
         <span id="w_118" class="ocr_word" title="bbox 489 1422 643 1479" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τέχνας</ins>
@@ -1100,15 +1098,14 @@
         </span>
         <span id="w_201" class="ocr_word" title="bbox 1262 2120 1553 2175">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cognitioiiis</ins>
-            <del title="nlp 0.90">cognitioiiis</del>
+            <ins title="nlp 2.00">conitionis</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 811 2193 1679 2251">
         <span id="w_202" class="ocr_word" title="bbox 811 2195 1089 2251" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">φαντασία,</ins>
+            <ins title="nlp 2.00">(φαντασία,</ins>
           </span>
         </span>
         <span id="w_203" class="ocr_word" title="bbox 1121 2194 1371 2249" lang="grc">
@@ -1130,7 +1127,7 @@
         </span>
         <span id="w_206" class="ocr_word" title="bbox 491 2289 551 2333">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">62</ins>
+            <ins title="nlp 2.00">52</ins>
           </span>
         </span>
         <span id="w_207" class="ocr_word" title="bbox 586 2289 735 2334">
@@ -1266,7 +1263,7 @@
       <span class="ocr_line" title="bbox 491 2502 2110 2560">
         <span id="w_228" class="ocr_word" title="bbox 491 2503 551 2547">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">63</ins>
+            <ins title="nlp 2.00">53</ins>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 585 2503 732 2547">
@@ -1393,7 +1390,7 @@
       <span class="ocr_line" title="bbox 317 2645 2112 2702">
         <span id="w_250" class="ocr_word" title="bbox 317 2665 353 2692">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">80</ins>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
         <span id="w_251" class="ocr_word" title="bbox 370 2652 498 2690">
@@ -1446,23 +1443,21 @@
         </span>
         <span id="w_259" class="ocr_word" title="bbox 1828 2645 2112 2698">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sapieniiaque</ins>
-            <del title="nlp 0.90">sapieniiaque</del>
+            <ins title="nlp 2.00">sapientiaque</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 372 2719 608 2761">
         <span id="w_260" class="ocr_word" title="bbox 372 2719 608 2761">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">removehat</ins>
-            <del title="nlp 0.90">removehat</del>
+            <ins title="nlp 2.00">removebat.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 491 2786 2110 2846">
         <span id="w_261" class="ocr_word" title="bbox 491 2789 553 2832">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">64</ins>
+            <ins title="nlp 2.00">54</ins>
           </span>
         </span>
         <span id="w_262" class="ocr_word" title="bbox 586 2789 734 2833">
@@ -1512,8 +1507,7 @@
         </span>
         <span id="w_270" class="ocr_word" title="bbox 1750 2786 1908 2829">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nuUius</ins>
-            <del title="nlp 0.90">nuUius</del>
+            <ins title="nlp 2.00">nullius</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1930 2786 1993 2828">
@@ -1555,8 +1549,7 @@
         </span>
         <span id="w_277" class="ocr_word" title="bbox 814 2861 926 2916">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">faUi,</ins>
-            <del title="nlp 0.90">faUi,</del>
+            <ins title="nlp 2.00">falli,</ins>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 944 2861 1188 2904">
@@ -1702,9 +1695,14 @@
             <del title="nlp 0.90">dubit.</del>
           </span>
         </span>
-        <span id="w_303" class="ocr_word" title="bbox 1546 3039 1587 3070">
+        <span id="w_303_0" class="ocr_word" title="bbox 1546 3039 1587 3070">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐστι</ins>
+            <ins class="alt" title="nlp 2.00">17</ins>
+          </span>
+        </span>
+        <span id="w_303_1" class="ocr_word" title="bbox 1546 3039 1587 3070">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἔστι</ins>
           </span>
         </span>
         <span id="w_305" class="ocr_word" title="bbox 1717 3032 1751 3069" lang="grc">
@@ -1712,14 +1710,9 @@
             <ins class="alt" title="nlp 1.00">δ’</ins>
           </span>
         </span>
-        <span id="w_306" class="ocr_word" title="bbox 1771 3046 1885 3069" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτοῦ</ins>
-          </span>
-        </span>
         <span id="w_307" class="ocr_word" title="bbox 1895 3054 1938 3058" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">—καὶ</ins>
+            <ins title="nlp 2.00">αὐτοῦ—καὶ</ins>
           </span>
         </span>
         <span id="w_308" class="ocr_word" title="bbox 2035 3037 2108 3067" lang="grc">
@@ -1735,9 +1728,14 @@
             <del title="nlp 0.90">Diog.</del>
           </span>
         </span>
-        <span id="w_311" class="ocr_word" title="bbox 631 3091 752 3127">
+        <span id="w_311_0" class="ocr_word" title="bbox 631 3091 752 3127">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_311_1" class="ocr_word" title="bbox 631 3091 752 3127">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_312" class="ocr_word" title="bbox 791 3091 831 3126">
@@ -1804,11 +1802,6 @@
             <del title="nlp 0.90">n.</del>
           </span>
         </span>
-        <span id="w_323" class="ocr_word" title="bbox 2041 3088 2107 3120">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">347</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 374 3141 1696 3192">
         <span id="w_324" class="ocr_word" title="bbox 374 3145 526 3191">
@@ -1830,7 +1823,7 @@
         </span>
         <span id="w_327" class="ocr_word" title="bbox 884 3148 951 3181">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">626</ins>
+            <ins title="nlp 2.00">625</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 977 3143 1205 3191">
