--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0067.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0067.html
@@ -37,8 +37,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 483 270 593 314">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nthU</ins>
-            <del title="nlp 0.90">nthU</del>
+            <ins title="nlp 2.00">nihil</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 622 272 793 327">
@@ -297,8 +296,7 @@
         </span>
         <span id="w_51" class="ocr_word" title="bbox 502 558 612 600">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nihU</ins>
-            <del title="nlp 0.90">nihU</del>
+            <ins title="nlp 2.00">nihil</ins>
           </span>
         </span>
         <span id="w_52" class="ocr_word" title="bbox 643 572 727 602">
@@ -309,8 +307,7 @@
         </span>
         <span id="w_53" class="ocr_word" title="bbox 757 560 921 613">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">turpitis</ins>
-            <del title="nlp 0.90">turpitis</del>
+            <ins title="nlp 2.00">turpius</ins>
           </span>
         </span>
         <span id="w_54" class="ocr_word" title="bbox 950 574 1077 614">
@@ -362,8 +359,7 @@
         </span>
         <span id="w_62" class="ocr_word" title="bbox 928 631 1043 686">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">llm,</ins>
-            <del title="nlp 0.90">llm,</del>
+            <ins title="nlp 2.00">11m,</ins>
           </span>
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1069 646 1108 687">
@@ -388,9 +384,14 @@
             <ins title="nlp 2.00">μηδὶν</ins>
           </span>
         </span>
-        <span id="w_67" class="ocr_word" title="bbox 1579 630 1974 687" lang="grc">
+        <span id="w_67_0" class="ocr_word" title="bbox 1579 630 1974 687">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ’ ὑπολαμβάνειν</ins>
+            <ins class="alt" title="nlp 2.00">δ᾿</ins>
+          </span>
+        </span>
+        <span id="w_67_1" class="ocr_word" title="bbox 1579 630 1974 687">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὑπολαμβάνειν</ins>
           </span>
         </span>
       </span>
@@ -586,8 +587,7 @@
         </span>
         <span id="w_109" class="ocr_word" title="bbox 1221 915 1357 958">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_110" class="ocr_word" title="bbox 1385 914 1469 958">
@@ -642,7 +642,7 @@
       <span class="ocr_line" title="bbox 349 1057 1977 1115">
         <span id="w_120" class="ocr_word" title="bbox 349 1057 409 1101">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">65</ins>
+            <ins title="nlp 2.00">55</ins>
           </span>
         </span>
         <span id="w_121" class="ocr_word" title="bbox 445 1057 594 1101">
@@ -693,8 +693,7 @@
         </span>
         <span id="w_129" class="ocr_word" title="bbox 1553 1059 1629 1102">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ula</ins>
-            <del title="nlp 0.90">Ula</del>
+            <ins title="nlp 2.00">illa</ins>
           </span>
         </span>
         <span id="w_130" class="ocr_word" title="bbox 1654 1061 1776 1102">
@@ -721,9 +720,14 @@
             <ins title="nlp 2.00">mutauit</ins>
           </span>
         </span>
-        <span id="w_135" class="ocr_word" title="bbox 712 1131 818 1186" lang="grc">
+        <span id="w_135_0" class="ocr_word" title="bbox 712 1131 818 1186">
           <span class="alternatives">
-            <ins title="nlp 2.00">(scil. Zeno).</ins>
+            <ins class="alt" title="nlp 2.00">(scil.</ins>
+          </span>
+        </span>
+        <span id="w_135_1" class="ocr_word" title="bbox 712 1131 818 1186">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Zeno).</ins>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 1060 1131 1117 1174" lang="grc">
@@ -829,8 +833,7 @@
         </span>
         <span id="w_154" class="ocr_word" title="bbox 1731 1202 1977 1257">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">impuLsione</ins>
-            <del title="nlp 0.90">impuLsione</del>
+            <ins title="nlp 2.00">impulisione</ins>
           </span>
         </span>
       </span>
@@ -890,15 +893,14 @@
         </span>
         <span id="w_164" class="ocr_word" title="bbox 1995 1289 2027 1316">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">is</ins>
-            <del title="nlp 0.90">is</del>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 347 1344 1975 1403">
         <span id="w_165" class="ocr_word" title="bbox 347 1344 408 1387">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">60</ins>
+            <ins title="nlp 2.00">56</ins>
           </span>
         </span>
         <span id="w_166" class="ocr_word" title="bbox 440 1344 681 1388">
@@ -1059,9 +1061,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 228 1559 1618 1618">
-        <span id="w_196" class="ocr_word" title="bbox 401 1561 517 1616" lang="grc">
+        <span id="w_196_0" class="ocr_word" title="bbox 401 1561 517 1616">
           <span class="alternatives">
-            <ins title="nlp 2.00">μηχανῇ</ins>
+            <ins class="alt" title="nlp 2.00">πάσῃ</ins>
+          </span>
+        </span>
+        <span id="w_196_1" class="ocr_word" title="bbox 401 1561 517 1616">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_197" class="ocr_word" title="bbox 549 1577 720 1617" lang="grc">
@@ -1090,17 +1097,11 @@
             <del title="nlp 0.90">(scil.</del>
           </span>
         </span>
-        <span id="w_202" class="ocr_word" title="bbox 1343 1559 1618 1617">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Arcesilausj.</ins>
-            <del title="nlp 0.90">Arcesilausj.</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 348 1630 2029 1688">
         <span id="w_203" class="ocr_word" title="bbox 348 1630 406 1674">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">67</ins>
+            <ins title="nlp 2.00">57</ins>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 454 1630 642 1674">
@@ -1169,8 +1170,7 @@
         </span>
         <span id="w_215" class="ocr_word" title="bbox 1994 1648 2029 1674">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">to</ins>
-            <del title="nlp 0.90">to</del>
+            <ins title="nlp 2.00">20</ins>
           </span>
         </span>
       </span>
@@ -1241,7 +1241,7 @@
       <span class="ocr_line" title="bbox 349 1845 1977 1904">
         <span id="w_227" class="ocr_word" title="bbox 349 1845 409 1889">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">68</ins>
+            <ins title="nlp 2.00">58</ins>
           </span>
         </span>
         <span id="w_228" class="ocr_word" title="bbox 443 1845 600 1890">
@@ -1583,9 +1583,14 @@
             <ins class="alt" title="nlp 1.00">φαντασία)</ins>
           </span>
         </span>
-        <span id="w_288" class="ocr_word" title="bbox 798 2302 947 2307">
+        <span id="w_288_0" class="ocr_word" title="bbox 798 2302 947 2307">
           <span class="alternatives">
-            <ins title="nlp 2.00">— — </ins>
+            <ins class="alt" title="nlp 2.00">—</ins>
+          </span>
+        </span>
+        <span id="w_288_1" class="ocr_word" title="bbox 798 2302 947 2307">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_289" class="ocr_word" title="bbox 977 2278 1271 2332">
@@ -1730,12 +1735,12 @@
         </span>
         <span id="w_313" class="ocr_word" title="bbox 1127 2445 1276 2451">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95"/>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_314" class="ocr_word" title="bbox 1278 2418 1294 2477">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">)</ins>
+            <ins title="nlp 2.00">—)</ins>
           </span>
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1326 2420 1399 2463">
@@ -1814,8 +1819,7 @@
         </span>
         <span id="w_327" class="ocr_word" title="bbox 1333 2562 1439 2618">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">(scU.</ins>
-            <del title="nlp 0.90">(scU.</del>
+            <ins title="nlp 2.00">(scil.</ins>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 1459 2562 1702 2617">
@@ -2001,8 +2005,7 @@
         </span>
         <span id="w_360" class="ocr_word" title="bbox 1505 2777 1634 2831">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Qmle</ins>
-            <del title="nlp 0.90">Qmle</del>
+            <ins title="nlp 2.00">Quale</ins>
           </span>
         </span>
         <span id="w_361" class="ocr_word" title="bbox 1657 2778 1787 2831">
@@ -2185,8 +2188,7 @@
         </span>
         <span id="w_390" class="ocr_word" title="bbox 1257 3037 1506 3083">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">eifectumque</ins>
-            <del title="nlp 0.90">eifectumque</del>
+            <ins title="nlp 2.00">effectumque</ins>
           </span>
         </span>
         <span id="w_391" class="ocr_word" title="bbox 1531 3038 1648 3073">
@@ -2248,8 +2250,7 @@
         </span>
         <span id="w_402" class="ocr_word" title="bbox 1532 3090 1733 3126">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ManutiuB.</ins>
-            <del title="nlp 0.90">ManutiuB.</del>
+            <ins title="nlp 2.00">Manutius.</ins>
           </span>
         </span>
         <span id="w_403" class="ocr_word" title="bbox 1771 3092 1784 3135" lang="grc">
@@ -2320,14 +2321,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1656 3217 1701 3253">
-        <span id="w_414_0" class="ocr_word" title="bbox 1656 3217 1701 3253">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">5</ins>
-          </span>
-        </span>
         <span id="w_414_1" class="ocr_word" title="bbox 1656 3217 1701 3253">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">*</ins>
+            <ins class="alt" title="nlp 2.00">5*</ins>
           </span>
         </span>
       </span>
